--- a/examples/browser.html
+++ b/examples/browser.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script type="text/html" id="template">
-      <h1 id="test" class="thing">My image gallery {{something}}</h1>
+      <h1 id="test" class="thing">My image gallery with {{items.length}} items</h1>
 
       <div show-if="items.length">
         There are {{items.length}} items
@@ -15,12 +15,14 @@
           </li>
         </ul>
       </div>
+
+      <div show-if-not="items.length">Nothing here</div>
     </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../dist/breezy.js"></script>
     <script type="text/javascript">
       var html = document.getElementById('template').innerHTML;
-      var render = breezy(html);
+      var render = breezy.compile(html);
       var data = {
         isEven: function(number) {
           return number % 2;
@@ -38,10 +40,6 @@
         data.items.push({
           number: counter++
         });
-
-        for(var i = 0; i < data.items.length; i++) {
-          data.items[i].number = data.items[i].number + counter;
-        }
 
         render(data);
         console.log('Took ', (new Date().getTime() - start), 'ms')
