--- a/examples/browser.html
+++ b/examples/browser.html
@@ -4,25 +4,26 @@
     <title>{{site.title}}</title>
   </head>
   <body>
-    <script type="text/html" id="template">
-      <h1 id="test" class="thing">My image gallery with {{items.length}} items</h1>
+    <div id="app">
+      <h1 id="test" class="thing" style="color: red;">My image gallery with {{items.length}} images</h1>
 
       <div show-if="items.length">
         There are {{items.length}} items
         <ul>
-          <li for-each="items" test="true">
+          <li for-each="items" class="node" style="color: {{isEven number ? 'red' : 'blue'}};">
             This is item number {{number}} it is {{isEven number ? 'even' : 'odd'}}
           </li>
         </ul>
       </div>
 
       <div show-if-not="items.length">Nothing here</div>
-    </script>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../dist/breezy.js"></script>
     <script type="text/javascript">
-      var html = document.getElementById('template').innerHTML;
-      var render = breezy.compile(html);
+      var start = new Date().getTime();
+      var render = breezy.compile(document.getElementById('app'));
       var data = {
         isEven: function(number) {
           return number % 2;
@@ -30,10 +31,11 @@
 
         items: []
       };
-      var node = render(data);
       var counter = 0;
 
-      document.body.appendChild(node);
+      render(data);
+
+      console.log('Initial render took ', (new Date().getTime() - start), 'ms');
 
       setInterval(function() {
         var start = new Date().getTime();
