--- a/examples/page.html
+++ b/examples/page.html
@@ -14,7 +14,7 @@
       There are {{images.length}} {{plural images.length ? 'images' : 'image'}}
       {{bla.thing.me test}}
       <ul>
-        <li for-each="images">
+        <li for-each="images" class="{{description}}">
           {{isLarge $this ? 'Yay' : 'Nay'}}
           We are at: {{$path}}
           <img src="{{src}}" alt="{{getDescription 'This is some text'}}">
