TodoMVC example fully working, removed jQuery.

--- a/examples/todomvc/index.html
+++ b/examples/todomvc/index.html
@@ -15,7 +15,7 @@
         <input id="toggle-all" type="checkbox" checked="allComplete">
         <label for="toggle-all">Mark all as complete</label>
         <ul id="todo-list">
-            <li for-each="todos" data-index="{{$key}}" class="todo {{complete ? 'completed'}} {{editing ? 'editing'}}">
+            <li for-each="displayTodos" class="todo {{complete ? 'completed'}} {{editing ? 'editing'}}">
                 <div class="view">
                     <input class="toggle" type="checkbox" checked="complete">
                     <label>{{text}}</label>
@@ -31,9 +31,9 @@
             <strong>{{remaining}}</strong> {{plural "item" remaining}} left
         </span>
         <ul id="filters">
-            <li><a href="#">All</a></li>
-            <li><a href="#active">Active</a></li>
-            <li><a href="#completed">Completed</a></li>
+            <li><a href="#all" class="{{equal selection 'all' ? 'selected'}}">All</a></li>
+            <li><a href="#active" class="{{equal selection 'active' ? 'selected'}}">Active</a></li>
+            <li><a href="#completed" class="{{equal selection 'completed' ? 'selected'}}">Completed</a></li>
         </ul>
         <button id="clear-completed" class="{{complete : 'hidden'}}">
             Clear completed ({{complete}})
@@ -45,10 +45,10 @@
     <p>Written by <a href="http://twitter.com/daffl">@daffl</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
-<script src="bower_components/todomvc-common/base.js"></script>
-<script src="bower_components/jquery/jquery.js"></script>
-<script src="bower_components/observe-js/src/observe.js"></script>
-<script src="../../dist/breezy.js"></script>
-<script src="app.js"></script>
+<script show-if-not="isExpress" src="bower_components/todomvc-common/base.js"></script>
+<script show-if-not="isExpress" src="bower_components/observe-js/src/observe.js"></script>
+<script show-if-not="isExpress" src="../../dist/breezy.js"></script>
+<script show-if-not="isExpress" src="js/view-model.js"></script>
+<script show-if-not="isExpress" src="js/app.js"></script>
 </body>
 </html>
