--- a/examples/todomvc/index.html
+++ b/examples/todomvc/index.html
@@ -31,9 +31,9 @@
             <strong>{{remaining}}</strong> {{plural "item" remaining}} left
         </span>
         <ul id="filters">
-            <li><a href="#all" class="{{equal selection 'all' ? 'selected'}}">All</a></li>
-            <li><a href="#active" class="{{equal selection 'active' ? 'selected'}}">Active</a></li>
-            <li><a href="#completed" class="{{equal selection 'completed' ? 'selected'}}">Completed</a></li>
+            <li><a href="{{isServer ? '/' : '#'}}all" class="{{equal selection 'all' ? 'selected'}}">All</a></li>
+            <li><a href="{{isServer ? '/' : '#'}}active" class="{{equal selection 'active' ? 'selected'}}">Active</a></li>
+            <li><a href="{{isServer ? '/' : '#'}}completed" class="{{equal selection 'completed' ? 'selected'}}">Completed</a></li>
         </ul>
         <button id="clear-completed" class="{{complete : 'hidden'}}">
             Clear completed ({{complete}})
@@ -45,10 +45,10 @@
     <p>Written by <a href="http://twitter.com/daffl">@daffl</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
-<script show-if-not="isExpress" src="bower_components/todomvc-common/base.js"></script>
-<script show-if-not="isExpress" src="bower_components/observe-js/src/observe.js"></script>
-<script show-if-not="isExpress" src="../../dist/breezy.js"></script>
-<script show-if-not="isExpress" src="js/view-model.js"></script>
-<script show-if-not="isExpress" src="js/app.js"></script>
+<script show-if-not="isServer" src="bower_components/todomvc-common/base.js"></script>
+<script show-if-not="isServer" src="bower_components/observe-js/src/observe.js"></script>
+<script show-if-not="isServer" src="../../dist/breezy.js"></script>
+<script show-if-not="isServer" src="js/view-model.js"></script>
+<script show-if-not="isServer" src="js/app.js"></script>
 </body>
 </html>
