TodoMVC example working in all recent browsers.

--- a/examples/public/browser.html
+++ b/examples/public/browser.html
@@ -17,7 +17,7 @@
 </div>
 <script src="../../dist/breezy.js"></script>
 <script src="bower_components/observe-js/src/observe.js"></script>
-<script>
+<script show-if-not="isNode">
     var data = {
         site: { title: 'My page' },
         name: 'david',
