--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -49,6 +49,6 @@
 <script show-if-not="isServer" src="bower_components/observe-js/src/observe.js"></script>
 <script show-if-not="isServer" src="../../dist/breezy.js"></script>
 <script show-if-not="isServer" src="js/view-model.js"></script>
-<script show-if-not="isServer" src="js/app.js"></script>
+<script show-if-not="isServer" src="js/todomvc.js"></script>
 </body>
 </html>
