--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -47,7 +47,7 @@
 </footer>
 <script show-if-not="isServer" src="bower_components/todomvc-common/base.js"></script>
 <script show-if-not="isServer" src="bower_components/observe-js/src/observe.js"></script>
-<script show-if-not="isServer" src="../../dist/breezy.js"></script>
+<script show-if-not="isServer" src="bower_components/breezy/dist/breezy.js"></script>
 <script show-if-not="isServer" src="js/view-model.js"></script>
 <script show-if-not="isServer" src="js/todomvc.js"></script>
 </body>
