Start refactoring for a better parser.

--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -1,54 +1,58 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Breezy • TodoMVC</title>
-    <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+  <meta charset="utf-8">
+  <title>Breezy • TodoMVC</title>
+  <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 </head>
 <body>
-<section id="todoapp">
+  <section id="todoapp">
     <header id="header">
-        <h1>todos</h1>
-        <input id="new-todo" placeholder="What needs to be done?" autofocus="">
+      <h1>todos</h1>
+      <input id="new-todo" placeholder="What needs to be done?" autofocus="">
     </header>
+
     <section id="main" class="{{todos.length : 'hidden'}}">
-        <input id="toggle-all" type="checkbox" checked="allComplete">
-        <label for="toggle-all">Mark all as complete</label>
-        <ul id="todo-list">
-            <li for-each="displayTodos" class="todo {{complete ? 'completed'}} {{editing ? 'editing'}}">
-                <div class="view">
-                    <input class="toggle" type="checkbox" checked="complete">
-                    <label>{{text}}</label>
-                    <button class="destroy"></button>
-                </div>
-                <input class="edit" type="text" value="{{text}}">
-            </li>
-        </ul>
+      <input id="toggle-all" type="checkbox" checked="allComplete">
+      <label for="toggle-all">Mark all as complete</label>
+      <ul id="todo-list">
+        <li for-each="{{displayTodos selection}}" class="todo {{complete ? 'completed'}} {{editing ? 'editing'}}">
+          <div class="view">
+            <input class="toggle" type="checkbox" checked="complete">
+            <label>{{text}}</label>
+            <button class="destroy"></button>
+          </div>
+          <input class="edit" type="text" value="{{text}}">
+        </li>
+      </ul>
     </section>
 
     <footer id="footer" class="{{todos.length : 'hidden'}}">
-        <span id="todo-count">
-            <strong>{{remaining}}</strong> {{plural "item" remaining}} left
-        </span>
-        <ul id="filters">
-            <li><a href="{{isServer ? '/' : '#'}}all" class="{{equal selection 'all' ? 'selected'}}">All</a></li>
-            <li><a href="{{isServer ? '/' : '#'}}active" class="{{equal selection 'active' ? 'selected'}}">Active</a></li>
-            <li><a href="{{isServer ? '/' : '#'}}completed" class="{{equal selection 'completed' ? 'selected'}}">Completed</a></li>
-        </ul>
-        <button id="clear-completed" class="{{complete : 'hidden'}}">
-            Clear completed ({{complete}})
-        </button>
+      <span id="todo-count">
+        <strong>{{remaining}}</strong> {{helpers.plural "item" remaining}} left
+      </span>
+      <ul id="filters">
+        <li><a href="/all" class="{{helpers.equal selection 'all' ? 'selected'}}">All</a></li>
+        <li><a href="/active" class="{{helpers.equal selection 'active' ? 'selected'}}">Active</a></li>
+        <li><a href="/completed" class="{{helpers.equal selection 'completed' ? 'selected'}}">Completed</a>
+        </li>
+      </ul>
+      <button id="clear-completed" class="{{complete : 'hidden'}}">
+        Clear completed ({{complete}})
+      </button>
     </footer>
-</section>
-<footer id="info">
+  </section>
+
+  <footer id="info">
     <p>Double-click to edit a todo</p>
     <p>Written by <a href="http://twitter.com/daffl">@daffl</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-</footer>
-<script show-if-not="isServer" src="bower_components/todomvc-common/base.js"></script>
-<script show-if-not="isServer" src="bower_components/observe-js/src/observe.js"></script>
-<script show-if-not="isServer" src="bower_components/breezy/dist/breezy.js"></script>
-<script show-if-not="isServer" src="js/view-model.js"></script>
-<script show-if-not="isServer" src="js/todomvc.js"></script>
+  </footer>
+
+  <script show-if-not="{{isServer}}" src="bower_components/todomvc-common/base.js"></script>
+  <script show-if-not="{{isServer}}" src="bower_components/observe-js/src/observe.js"></script>
+  <script show-if-not="{{isServer}}" src="../../dist/breezy.js"></script>
+  <script show-if-not="{{isServer}}" src="js/view-model.js"></script>
+  <script show-if-not="{{isServer}}" src="js/todomvc.js"></script>
 </body>
 </html>
