--- a/examples/public/index.html
+++ b/examples/public/index.html
@@ -22,7 +22,7 @@
             <label>{{text}}</label>
             <button class="destroy"></button>
           </div>
-          <input class="edit" type="text" value="{{text}}">
+          <input class="edit" type="text" value="${text}">
         </li>
       </ul>
     </section>
